# printpage

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  biome.json  entrypoint.sh  mise.toml  package.json  playwright.config.ts  pnpm-lock.yaml  printpage.json  printpage.sh  pyproject.toml  tsconfig.json
.codex/environments/: environment.toml
frontend/: openapi.json
frontend/client/: index.ts  sdk.gen.ts  types.gen.ts
frontend/src/: api.ts  app.ts  config.ts  queueTroubleshooting.test.ts  queueTroubleshooting.ts  stockFit.test.ts  stockFit.ts
printpage/: __init__.py  models.py  printer.py  rendering.py  state.py  stock.py
printpage/assets/: app.css
printpage/static/: app.css  app.js  config.js
printpage/templates/: config.html  favicons.html  index.html
printpage/templates/labels/: label.html
printpage/testing/: fake-brother-ql700.ppd
scripts/: export_openapi.py
templates/: config.html  index.html  label.html
tests/: test_app.py
tests/playwright/: mobile-layout.spec.ts  static-app-server.mjs
